add start_date, end_date on contract.line and change how compute periods

--- a/view/contract_line_list.xml
+++ b/view/contract_line_list.xml
@@ -5,4 +5,6 @@ this repository contains the full copyright notices and license terms. -->
     <field name="contract"/>
     <field name="service"/>
     <field name="unit_price"/>
+    <field name="start_date"/>
+    <field name="end_date"/>
 </tree>
