--- a/view/contract_consumption_form.xml
+++ b/view/contract_consumption_form.xml
@@ -2,15 +2,16 @@
 <!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
 <form string="Contract Consumption">
+    <label name="contract"/>
+    <field name="contract" colspan="3"/>
     <label name="contract_line"/>
     <field name="contract_line"/>
-    <label name="invoice_line"/>
-    <field name="invoice_line"/>
     <label name="start_date"/>
     <field name="start_date"/>
     <label name="end_date"/>
     <field name="end_date"/>
     <label name="invoice_date"/>
     <field name="invoice_date"/>
+    <field name="invoice_line" colspan="4"/>
     <button name="invoice" string="Invoice" icon="tryton-go-next" colspan="4"/>
 </form>
