fix last_invoice calculation and rrule definition

--- a/view/contract_line_list.xml
+++ b/view/contract_line_list.xml
@@ -7,4 +7,6 @@ this repository contains the full copyright notices and license terms. -->
     <field name="unit_price"/>
     <field name="start_date"/>
     <field name="end_date"/>
+    <field name="last_consumption_date"/>
+    <field name="last_consumption_invoice_date"/>
 </tree>
