--- a/view/contract_service_form.xml
+++ b/view/contract_service_form.xml
@@ -2,6 +2,8 @@
 <!-- The COPYRIGHT file at the top level of this repository contains the full
      copyright notices and license terms. -->
 <form string="Contract Service">
+    <label name="name"/>
+    <field name="name"/>
     <label name="product"/>
     <field name="product"/>
 </form>
