--- a/view/contract_service_list.xml
+++ b/view/contract_service_list.xml
@@ -2,5 +2,6 @@
 <!-- The COPYRIGHT file at the top level of this repository contains the full
      copyright notices and license terms. -->
 <tree string="Contract Service">
+    <field name="name"/>
     <field name="product"/>
 </tree>
