--- a/view/contract_consumption_form.xml
+++ b/view/contract_consumption_form.xml
@@ -10,6 +10,10 @@ this repository contains the full copyright notices and license terms. -->
     <field name="start_date"/>
     <label name="end_date"/>
     <field name="end_date"/>
+    <label name="init_period_date"/>
+    <field name="init_period_date"/>
+    <label name="end_period_date"/>
+    <field name="end_period_date"/>
     <label name="invoice_date"/>
     <field name="invoice_date"/>
     <field name="invoice_line" colspan="4"/>
