Add sequence on contract lines

--- a/view/contract_line_form.xml
+++ b/view/contract_line_form.xml
@@ -14,6 +14,8 @@ this repository contains the full copyright notices and license terms. -->
     <field name="unit_price"/>
     <label name="first_invoice_date"/>
     <field name="first_invoice_date"/>
+    <label name="sequence"/>
+    <field name="sequence"/>
     <separator name="description" colspan="4"/>
     <field name="description" colspan="4"/>
 </form>
