add finish state

--- a/view/contract_form.xml
+++ b/view/contract_form.xml
@@ -28,6 +28,7 @@
     <group id="buttons" colspan="2">
         <button name="draft" string="Draft"/>
         <button name="validate_contract" string="Validate"/>
+        <button name="finish_contract" string="Finish"/>
         <button name="cancel" string="Cancel"/>
     </group>
 </form>
