--- a/view/contract_list.xml
+++ b/view/contract_list.xml
@@ -11,6 +11,6 @@ this repository contains the full copyright notices and license terms. -->
     <field name="freq"/>
     <field name="state"/>
     <button name="draft" string="Draft" tree_invisible="1"/>
-    <button name="validate_contract" string="Validate" tree_invisible="1"/>
-    <button name="cancel" string="Cancel" tree_invisible="1"/>
+    <button name="confirm" string="Confirm" tree_invisible="1"/>
+    <button name="cancel" string="Cancel" tree_invisible="1" confirm="Cancelled contracts no longer create consumptions. Are you sure you want to cancel this contract?"/>
 </tree>
