Create contracte.line list view without sequence and use it by default. Also implement rules to honour company configuration for lines and consumptions.

--- a/view/contract_form.xml
+++ b/view/contract_form.xml
@@ -27,7 +27,7 @@
     <newline/>
     <notebook>
         <page string="Contract" id="contract">
-            <field name="lines" colspan="4"/>
+            <field name="lines" colspan="4" mode="tree,form" view_ids="contract.contract_line_view_list_sequence"/>
             <label name="state"/>
             <field name="state"/>
             <group id="buttons" colspan="2">
