Rename 'reference' field to 'number' in order to follow latest Tryton naming conventions.

--- a/view/contract_list.xml
+++ b/view/contract_list.xml
@@ -3,7 +3,7 @@
 this repository contains the full copyright notices and license terms. -->
 <tree string="Contract">
     <field name="company"/>
-    <field name="reference"/>
+    <field name="number"/>
     <field name="party"/>
     <field name="start_date"/>
     <field name="end_date"/>
