--- a/view/contract_form.xml
+++ b/view/contract_form.xml
@@ -2,8 +2,8 @@
 <!-- The COPYRIGHT file at the top level of this repository contains the full
      copyright notices and license terms. -->
 <form string="Contract">
-    <label name="reference"/>
-    <field name="reference"/>
+    <label name="number"/>
+    <field name="number"/>
     <label name="company"/>
     <field name="company"/>
     <label name="party"/>
