Allow configuring journal. (grafted from d677ecf9d2afebcb40de500d98f428c37ef69df9)

--- a/view/configuration_form.xml
+++ b/view/configuration_form.xml
@@ -4,4 +4,6 @@ this repository contains the full copyright notices and license terms. -->
 <form string="Contract Configuration">
     <label name="contract_sequence"/>
     <field name="contract_sequence"/>
+    <label name="journal"/>
+    <field name="journal"/>
 </form>
