--- a/view/configuration_form.xml
+++ b/view/configuration_form.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
-<!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
-this repository contains the full copyright notices and license terms. -->
+<!-- The COPYRIGHT file at the top level of this repository contains the full
+     copyright notices and license terms. -->
 <form string="Contract Configuration">
     <label name="contract_sequence"/>
     <field name="contract_sequence"/>
