--- a/view/contract_consumption_form.xml
+++ b/view/contract_consumption_form.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
-<!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
-this repository contains the full copyright notices and license terms. -->
+<!-- The COPYRIGHT file at the top level of this repository contains the full
+     copyright notices and license terms. -->
 <form string="Contract Consumption">
     <label name="contract"/>
     <field name="contract" colspan="3"/>
