--- a/view/contract_list.xml
+++ b/view/contract_list.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
-<!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
-this repository contains the full copyright notices and license terms. -->
+<!-- The COPYRIGHT file at the top level of this repository contains the full
+     copyright notices and license terms. -->
 <tree string="Contract">
     <field name="company"/>
     <field name="number"/>
