--- a/view/contract_consumption_form.xml
+++ b/view/contract_consumption_form.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <!-- The COPYRIGHT file at the top level of this repository contains the full
      copyright notices and license terms. -->
-<form string="Contract Consumption">
+<form>
     <label name="contract"/>
     <field name="contract" colspan="3"/>
     <label name="contract_line"/>
