--- a/view/contract_service_list.xml
+++ b/view/contract_service_list.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <!-- The COPYRIGHT file at the top level of this repository contains the full
      copyright notices and license terms. -->
-<tree string="Contract Service">
+<tree>
     <field name="name"/>
     <field name="product"/>
 </tree>
