--- a/view/contract_consumption_list.xml
+++ b/view/contract_consumption_list.xml
@@ -9,5 +9,5 @@
     <field name="invoice_date"/>
     <field name="init_period_date"/>
     <field name="end_period_date"/>
-    <button name="invoice" string="Invoice" tree_invisible="1"/>
+    <button name="invoice" tree_invisible="1"/>
 </tree>
