Add analytics to the contract lines Fix bugs  #040104

--- a/view/contract_consumption_form.xml
+++ b/view/contract_consumption_form.xml
@@ -18,5 +18,5 @@
     <field name="end_period_date"/>
     <field name="invoice_lines" colspan="4"/>
     <field name="credit_lines" colspan="4"/>
-    <button name="invoice" icon="tryton-forward" colspan="4"/>
+    <button name="generate_invoice" icon="tryton-forward" colspan="4"/>
 </form>
