FIX pending, noticie domain and company contract review #0410592

--- a/view/contract_review_form.xml
+++ b/view/contract_review_form.xml
@@ -6,6 +6,8 @@
         <page string="Contract" id="contract">
           <label name="contract"/>
           <field name="contract"/>
+          <label name="company"/>
+          <field name="company"/>
           <label name="review_date"/>
           <field name="review_date"/>
           <label name="limit_date"/>
